<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_heading_delivery_options"
        style="@style/TextStyleHeadingBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:gravity="center"
        android:text="@string/orders" />

    <TextView
        android:id="@+id/tv_order_sub_heading"
        style="@style/TextStyleContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_heading_delivery_options"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/orders_heading" />

    <TextView
        android:id="@+id/tv_order_instructions_steps"
        style="@style/TextStyleContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_order_sub_heading"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal" />

    <TextView
        android:id="@+id/tvproceed"
        style="@style/TextStyleBlueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_order_instructions_steps"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_normal"
        android:paddingStart="@dimen/margin_normal"
        android:paddingEnd="@dimen/margin_normal"
        android:text="@string/proceed"
        android:textAllCaps="true"
        android:textSize="14sp" />


</RelativeLayout>