<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativetop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/img_red_shoes" />

        <TextView
            android:id="@+id/tv_heading_signup"
            style="@style/TextStyleHeadingBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_restoration"
        style="@style/TextStyleBlueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewtop"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginStart="5dp"
        android:drawableStart="@drawable/ic_restoration"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:layout_toStartOf="@id/viewmiddle"
        android:text="@string/restoration"
        android:textAllCaps="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_custom"
        style="@style/TextStyleBlueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewtop"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/margin_normal"
        android:gravity="center"
        android:layout_marginEnd="5dp"
        android:drawableStart="@drawable/ic_custom"
        android:layout_toEndOf="@id/viewmiddle"
        android:text="@string/custom"
        android:textAllCaps="true"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_hightlight_service"
        style="@style/TextStyleContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewbottom"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:gravity="center"
        android:text="@string/highlighted_services"
        android:textAllCaps="true" />

    <View
        android:id="@+id/viewtop"
        android:layout_width="90dp"
        android:layout_height="2dp"
        android:layout_below="@id/relativetop"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary" />

    <View
        android:id="@+id/viewbottom"
        android:layout_width="90dp"
        android:layout_height="2dp"
        android:layout_below="@id/tv_custom"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@color/colorPrimary" />

    <View
        android:id="@+id/viewmiddle"
        android:layout_width="1dp"
        android:layout_height="2dp"
        android:layout_below="@id/viewtop"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_normal" />
</RelativeLayout>