<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/jordan_blue" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/transparent_black"
            android:padding="20dp">

            <ImageView
                android:id="@+id/iv_back_forget_password"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                android:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/tv_heading_forget_password"
                style="@style/TextStyleHeadingWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:text="@string/forget_password" />

        <EditText
            android:id="@+id/input_text_forget_password_username"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_normal_x"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_heading_forget_password"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <TextView
            android:id="@+id/tv_forget_password_done"
            style="@style/TextStyleBlueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_text_forget_password_username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/send"
            android:textAllCaps="true" />
    </RelativeLayout>
</RelativeLayout>