<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/jordan_white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/transparent_black"
        android:padding="20dp">

        <EditText
            android:id="@+id/input_text_signup_email"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_container_name"
            android:layout_marginTop="@dimen/margin_normal"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <EditText
            android:id="@+id/input_text_signup_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_text_signup_email"
            android:layout_marginTop="@dimen/margin_normal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp" />

        <EditText
            android:id="@+id/input_text_signup_password_confirm"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_text_signup_password"
            android:layout_marginTop="@dimen/margin_normal"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="12dp" />

        <EditText
            android:id="@+id/input_text_zipcode"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_text_signup_password_confirm"
            android:layout_marginTop="@dimen/margin_normal"
            android:hint="@string/zipcode"
            android:inputType="textPassword"
            android:padding="12dp" />

        <ImageView
            android:id="@+id/iv_back_signup"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:tint="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/ll_container_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_heading_signup"
            android:layout_marginTop="@dimen/margin_second_normal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_text_signup_first_name"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:inputType="text"
                android:padding="12dp" />

            <EditText
                android:id="@+id/input_text_signup_last_name"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:inputType="text"
                android:padding="12dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_container_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_text_zipcode"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_normal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_signup_costomer"
                style="@style/TextStyleBlueButtonBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/sneakerhead"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tv_signup_artist"
                style="@style/TextStyleBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/shoe_artist"
                android:textAllCaps="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_container_bottom_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyleLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/already_member" />

            <TextView
                android:id="@+id/tv_signup_login"
                style="@style/TextStyleHeadingWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/sign_in"
                android:textAllCaps="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_heading_signup"
            style="@style/TextStyleHeadingWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
            android:text="@string/register_fixmykix" />

        <TextView
            android:id="@+id/tv_signup_done"
            style="@style/TextStyleBlueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_container_role"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/register"
            android:textAllCaps="true" />
        <!-- <ScrollView
             android:id="@+id/scroll_signup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@id/ll_container_bottom_signup"
             android:layout_below="@id/tv_heading_signup">

             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/civ_profile_signup"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_centerHorizontal="true"
                     android:src="@drawable/ic_person_black_24dp" />

                 <TextView
                     android:id="@+id/tv_dob"
                     style="@style/EditTextStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/til_email"
                     android:layout_margin="@dimen/activity_horizontal_margin"
                     android:background="@drawable/bg_boutton_white"
                     android:hint="Select DOB"
                     android:padding="@dimen/padding_small" />

                 <RadioGroup
                     android:id="@+id/rg_gender"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_dob"
                     android:orientation="horizontal"
                     android:padding="@dimen/padding_small">

                     <RadioButton
                         style="@style/EditTextStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:buttonTint="@color/colorPrimary"
                         android:paddingHorizontal="@dimen/padding_small"
                         android:text="@string/male" />

                     <RadioButton
                         style="@style/EditTextStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:buttonTint="@color/colorPrimary"
                         android:paddingHorizontal="@dimen/padding_small"
                         android:text="@string/female" />
                 </RadioGroup>

                 <LinearLayout
                     android:id="@+id/ll_container_role"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/rg_gender"
                     android:layout_centerHorizontal="true"
                     android:orientation="horizontal">

                     <TextView
                         style="@style/TextStyleBlueButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="8dp"
                         android:layout_weight="1"
                         android:background="@drawable/bg_boutton_theme_rectangle"
                         android:text="@string/sneakerhead"
                         android:textAllCaps="true" />

                     <TextView
                         style="@style/TextStyleBorder"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="8dp"
                         android:layout_weight="1"
                         android:text="@string/shoe_artist"
                         android:textAllCaps="true" />
                 </LinearLayout>

                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_password_signup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/ll_container_role"
                     android:hint="@string/password"
                     android:padding="16dp"
                     app:hintTextAppearance="@style/EditTextStyle"
                     app:passwordToggleEnabled="true"
                     app:passwordToggleTint="@color/sign_up_button">

                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/input_text_signup_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bg_boutton_white"
                         android:inputType="textPassword"
                         android:padding="8dp" />

                 </com.google.android.material.textfield.TextInputLayout>


                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_confirm_password_signup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/til_password_signup"
                     android:hint="@string/confirm_password"
                     android:padding="16dp"
                     app:hintTextAppearance="@style/EditTextStyle"
                     app:passwordToggleEnabled="true"
                     app:passwordToggleTint="@color/sign_up_button">

                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/input_text_signup_confirm_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bg_boutton_white"
                         android:inputType="textPassword"
                         android:padding="8dp" />

                 </com.google.android.material.textfield.TextInputLayout>

                 <TextView
                     android:id="@+id/tv_signup_done"
                     style="@style/TextStyleBlueButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/til_confirm_password_signup"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="8dp"
                     android:text="@string/register"
                     android:textAllCaps="true" />

             </RelativeLayout>
         </ScrollView>

         <LinearLayout
             android:id="@+id/ll_container_bottom_signup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:orientation="vertical">

             <TextView
                 style="@style/TextStyleLight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
                 android:text="@string/already_member" />

             <TextView
                 android:id="@+id/tv_signup_login"
                 style="@style/TextStyleHeadingWhite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/margin_normal"
                 android:text="@string/sign_in"
                 android:textAllCaps="true" />
         </LinearLayout>-->
    </RelativeLayout>
</RelativeLayout>